fix(frontend): contact box overflow

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -7,11 +7,11 @@
     .assets-container{
         display: static;
         flex: 1;
-        height: 20vh;
+        height: 15vh;
         overflow: hidden;
     }
     &-assets{
-        min-height: 20vh;
+        min-height: 15vh;
         width: 100%;
         transition: 2s;
     }
