--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -19,6 +19,7 @@
     }
 }
 .box {
+    overflow: hidden;
     width: fit-content;
     height: fit-content;
     display: flex;
